Updated the page title to be more descriptive.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trang Chủ Động - Nền Tảng Dễ Dàng Tạo Trang Web</title>
+    <title>Trang Chủ Động - Nền Tảng Tạo Trang Web Nhanh Chóng</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
