--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2023 Trang Chủ Động. Tất cả các quyền được bảo lưu.</p>
+        <p>&copy; <span id="year"></span> Trang Chủ Động. Tất cả các quyền được bảo lưu.</p>
     </footer>
     <script src="script.js"></script>
+    <script>
+        document.getElementById('year').textContent = new Date().getFullYear();
+    </script>
 </body>
 </html>
