Update footer copyright format for improved clarity.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; <span id="year"></span> Trang Chủ Động. Tất cả các quyền được bảo lưu.</p>
+        <p>&copy; <span id="year"></span> Trang Chủ Động. Tất cả quyền lợi được bảo lưu.</p>
     </footer>
     <script src="script.js"></script>
     <script>
